[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Player/Gun/Gun.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Gun/GunTemplate.gd" type="Script" id=2]
[ext_resource path="res://src/Player/Gun/Bullets/Player_Standard_Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/Gun/Shotgun.gd" type="Script" id=4]

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="GunTemplate" type="Node2D" parent="."]
script = ExtResource( 2 )
bullet = ExtResource( 3 )

[node name="GunStream" type="AudioStreamPlayer" parent="."]

[node name="Shotgun" type="Node2D" parent="."]
script = ExtResource( 4 )
bullet = ExtResource( 3 )
nshots = 6

[node name="Muzzle" type="Position2D" parent="Shotgun"]
position = Vector2( 30, 0 )
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
